Fix package name and folder structure